// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Footnote renders closed 1`] = `
.c4 {
  padding-top: 1.5rem;
  padding-bottom: 1.5rem;
  display: block;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c9 {
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c10 {
  word-wrap: break-word;
  color: #2a2c2e;
  font-weight: 700;
  font-size: 1rem;
  line-height: 1.25;
  -webkit-letter-spacing: -0.6px;
  -moz-letter-spacing: -0.6px;
  -ms-letter-spacing: -0.6px;
  letter-spacing: -0.6px;
}

.c10 sup {
  position: relative;
  vertical-align: baseline;
  padding-left: 0.1em;
  font-size: 0.875rem;
  top: -0.5em;
}

.c10 > span {
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
}

div.c7 {
  padding-left: 1rem;
  padding-right: 1rem;
}

.c6 {
  width: 100%;
}

div.c6 {
  margin: 0 auto;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin: 0 auto;
}

div.c5 {
  padding: 0;
}

.c3 {
  padding: 0;
  margin: 0;
  border-width: 0;
  -webkit-transform: rotate(-0.00001deg);
  -ms-transform: rotate(-0.00001deg);
  transform: rotate(-0.00001deg);
  width: 100%;
  height: 1px;
  background-color: #d8d8d8;
}

.c11 {
  padding: 0;
  margin: 0;
  border-width: 0;
  font-family: "TELUS-Web","Helvetica Neue",Helvetica,Arial,sans-serif;
  color: #2a2c2e;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: none;
  box-shadow: none;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c12 {
  background: #f7f7f8;
}

.c0 {
  position: fixed;
  top: 0;
  left: 0;
  height: 100vh;
  width: 100vw;
  background-color: #f7f7f8;
  display: block;
  box-shadow: 0 0 16px 0 rgba(0,0,0,0.1);
  -webkit-transform: translateY(100%);
  -ms-transform: translateY(100%);
  transform: translateY(100%);
  -webkit-transition: -webkit-transform 500ms ease-out;
  -webkit-transition: transform 500ms ease-out;
  transition: transform 500ms ease-out;
  z-index: 99999;
  visibility: hidden;
}

.c1 {
  position: relative;
  width: 100%;
}

.c8 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c14 {
  overflow: auto;
  -webkit-overflow-scrolling: touch;
  -webkit-transition: height 300ms ease-out,opacity 200ms ease-out;
  transition: height 300ms ease-out,opacity 200ms ease-out;
  -webkit-transform: translateZ(0);
  -ms-transform: translateZ(0);
  transform: translateZ(0);
  background-color: #f7f7f8;
  max-height: calc(100vh - autopx);
  height: auto;
  opacity: 1;
}

.c2 {
  display: none;
}

.c13 {
  display: none;
}

@media (min-width:768px) {
  .c4 {
    padding-top: 2rem;
    padding-bottom: 2rem;
  }
}

@media (max-width:575px) {
  .c7 {
    display: block;
    text-align: inherit;
  }
}

@media (min-width:576px) {
  .c7 {
    display: block;
    text-align: inherit;
  }
}

@media (min-width:768px) {
  .c7 {
    display: block;
    text-align: inherit;
  }
}

@media (min-width:992px) {
  .c7 {
    display: block;
    text-align: inherit;
  }
}

@media (min-width:1200px) {
  .c7 {
    display: block;
    text-align: inherit;
  }
}

@media (max-width:575px) {
  div.c6 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
  }
}

@media (min-width:576px) {
  div.c6 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
  }
}

@media (min-width:768px) {
  div.c6 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
  }
}

@media (min-width:992px) {
  div.c6 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
  }
}

@media (min-width:1200px) {
  div.c6 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
  }
}

@media (max-width:575px) {
  .c5 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
  }
}

@media (min-width:576px) {
  .c5 {
    max-width: 36rem;
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
  }
}

@media (min-width:768px) {
  .c5 {
    max-width: 48rem;
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
  }
}

@media (min-width:992px) {
  .c5 {
    max-width: 62rem;
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
  }
}

@media (min-width:1200px) {
  .c5 {
    max-width: 75rem;
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
  }
}

@media (prefers-reduced-motion:reduce) {
  .c0 {
    -webkit-transition: none;
    transition: none;
  }
}

@media (min-width:768px) {
  .c0 {
    top: auto;
    bottom: 0;
    height: auto;
    max-height: 50vh;
  }
}

@media (prefers-reduced-motion:reduce) {
  .c14 {
    -webkit-transition: height 1ms ease-out,opacity 1ms ease-out;
    transition: height 1ms ease-out,opacity 1ms ease-out;
  }
}

@media (min-width:768px) {
  .c14 {
    max-height: calc(50vh - autopx);
  }
}

@media (min-width:768px) {
  .c2 {
    display: block;
  }
}

@media (max-width:767px) {
  .c13 {
    display: block;
  }
}

<div>
  <span
    id="title"
  >
    Terms and conditions may apply
  </span>
  <button
    id="one"
    type="button"
  >
    1
  </button>
  <button
    id="two"
    type="button"
  >
    2
  </button>
  <div>
    <div
      class="c0"
    >
      <div
        aria-label="modal dialog"
        aria-modal="true"
        role="dialog"
      >
        <div
          tabindex="0"
        />
        <div>
          <div>
            <div
              class="c1"
            >
              <div
                class="c2"
              >
                <hr
                  class="c3"
                />
              </div>
              <div
                class="c4"
              >
                <div
                  class="c5 container-fluid"
                >
                  <div
                    class="c6 row"
                  >
                    <div
                      class="col-xs-12 c7"
                    >
                      <div
                        class="c8 sc-htoDjs c8 c9"
                      >
                        <h2
                          class="c10"
                          data-testid="heading"
                          tabindex="-1"
                        >
                          Terms and conditions
                        </h2>
                        <button
                          aria-label="close"
                          class="c11"
                        >
                          <svg
                            class="c12"
                            focusable="false"
                            height="24px"
                            viewBox="0 0 24 24"
                            width="24px"
                            xlink="http://www.w3.org/1999/xlink"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <g
                              fill="none"
                              fill-rule="evenodd"
                              stroke="none"
                              stroke-width="1"
                            >
                              <g
                                fill="#4B286D"
                                fill-rule="nonzero"
                              >
                                <path
                                  d="M11.99975,12.70675 L7.85325,16.85325 C7.75625,16.95025 7.62825,16.99925 7.50025,16.99925 C7.37225,16.99925 7.24425,16.95025 7.14625,16.85325 C6.95125,16.65825 6.95125,16.34125 7.14625,16.14625 L11.29275,11.99975 L7.14625,7.85325 C6.95125,7.65825 6.95125,7.34125 7.14625,7.14625 C7.34125,6.95125 7.65825,6.95125 7.85325,7.14625 L11.99975,11.29275 L16.14625,7.14625 C16.34125,6.95125 16.65825,6.95125 16.85325,7.14625 C17.04825,7.34125 17.04825,7.65825 16.85325,7.85325 L12.70675,11.99975 L16.85325,16.14625 C17.04825,16.34125 17.04825,16.65825 16.85325,16.85325 C16.75625,16.95025 16.62825,16.99925 16.50025,16.99925 C16.37225,16.99925 16.24425,16.95025 16.14625,16.85325 L11.99975,12.70675 Z M12,24 C5.38330435,24 0,18.6166957 0,12 C0,5.38330435 5.38330435,0 12,0 C18.6166957,0 24,5.38330435 24,12 C24,18.6166957 18.6166957,24 12,24 Z M12,1.04347826 C5.95826087,1.04347826 1.04347826,5.95826087 1.04347826,12 C1.04347826,18.0417391 5.95826087,22.9565217 12,22.9565217 C18.0417391,22.9565217 22.9565217,18.0417391 22.9565217,12 C22.9565217,5.95826087 18.0417391,1.04347826 12,1.04347826 Z"
                                />
                              </g>
                            </g>
                          </svg>
                        </button>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="c13"
              >
                <hr
                  class="c3"
                />
              </div>
            </div>
            <div
              class="c14"
            />
          </div>
        </div>
        <div
          tabindex="0"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Footnote renders opened 1`] = `
.c4 {
  padding-top: 1.5rem;
  padding-bottom: 1.5rem;
  display: block;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c9 {
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c10 {
  word-wrap: break-word;
  color: #2a2c2e;
  font-weight: 700;
  font-size: 1rem;
  line-height: 1.25;
  -webkit-letter-spacing: -0.6px;
  -moz-letter-spacing: -0.6px;
  -ms-letter-spacing: -0.6px;
  letter-spacing: -0.6px;
}

.c10 sup {
  position: relative;
  vertical-align: baseline;
  padding-left: 0.1em;
  font-size: 0.875rem;
  top: -0.5em;
}

.c10 > span {
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
}

div.c7 {
  padding-left: 1rem;
  padding-right: 1rem;
}

.c6 {
  width: 100%;
}

div.c6 {
  margin: 0 auto;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin: 0 auto;
}

div.c5 {
  padding: 0;
}

.c3 {
  padding: 0;
  margin: 0;
  border-width: 0;
  -webkit-transform: rotate(-0.00001deg);
  -ms-transform: rotate(-0.00001deg);
  transform: rotate(-0.00001deg);
  width: 100%;
  height: 1px;
  background-color: #d8d8d8;
}

.c11 {
  padding: 0;
  margin: 0;
  border-width: 0;
  font-family: "TELUS-Web","Helvetica Neue",Helvetica,Arial,sans-serif;
  color: #2a2c2e;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: none;
  box-shadow: none;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c12 {
  background: #f7f7f8;
}

.c0 {
  position: fixed;
  top: 0;
  left: 0;
  height: 100vh;
  width: 100vw;
  background-color: #f7f7f8;
  display: block;
  box-shadow: 0 0 16px 0 rgba(0,0,0,0.1);
  -webkit-transform: translateY(100%);
  -ms-transform: translateY(100%);
  transform: translateY(100%);
  -webkit-transition: -webkit-transform 500ms ease-out;
  -webkit-transition: transform 500ms ease-out;
  transition: transform 500ms ease-out;
  z-index: 99999;
  visibility: hidden;
  -webkit-transform: translateY(0);
  -ms-transform: translateY(0);
  transform: translateY(0);
}

.c1 {
  position: relative;
  width: 100%;
}

.c8 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c14 {
  overflow: auto;
  -webkit-overflow-scrolling: touch;
  -webkit-transition: height 300ms ease-out,opacity 200ms ease-out;
  transition: height 300ms ease-out,opacity 200ms ease-out;
  -webkit-transform: translateZ(0);
  -ms-transform: translateZ(0);
  transform: translateZ(0);
  background-color: #f7f7f8;
  max-height: calc(100vh - autopx);
  height: auto;
  opacity: 1;
}

.c2 {
  display: none;
}

.c13 {
  display: none;
}

@media (min-width:768px) {
  .c4 {
    padding-top: 2rem;
    padding-bottom: 2rem;
  }
}

@media (max-width:575px) {
  .c7 {
    display: block;
    text-align: inherit;
  }
}

@media (min-width:576px) {
  .c7 {
    display: block;
    text-align: inherit;
  }
}

@media (min-width:768px) {
  .c7 {
    display: block;
    text-align: inherit;
  }
}

@media (min-width:992px) {
  .c7 {
    display: block;
    text-align: inherit;
  }
}

@media (min-width:1200px) {
  .c7 {
    display: block;
    text-align: inherit;
  }
}

@media (max-width:575px) {
  div.c6 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
  }
}

@media (min-width:576px) {
  div.c6 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
  }
}

@media (min-width:768px) {
  div.c6 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
  }
}

@media (min-width:992px) {
  div.c6 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
  }
}

@media (min-width:1200px) {
  div.c6 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
  }
}

@media (max-width:575px) {
  .c5 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
  }
}

@media (min-width:576px) {
  .c5 {
    max-width: 36rem;
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
  }
}

@media (min-width:768px) {
  .c5 {
    max-width: 48rem;
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
  }
}

@media (min-width:992px) {
  .c5 {
    max-width: 62rem;
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
  }
}

@media (min-width:1200px) {
  .c5 {
    max-width: 75rem;
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
  }
}

@media (prefers-reduced-motion:reduce) {
  .c0 {
    -webkit-transition: none;
    transition: none;
  }
}

@media (min-width:768px) {
  .c0 {
    top: auto;
    bottom: 0;
    height: auto;
    max-height: 50vh;
  }
}

@media (prefers-reduced-motion:reduce) {
  .c14 {
    -webkit-transition: height 1ms ease-out,opacity 1ms ease-out;
    transition: height 1ms ease-out,opacity 1ms ease-out;
  }
}

@media (min-width:768px) {
  .c14 {
    max-height: calc(50vh - autopx);
  }
}

@media (min-width:768px) {
  .c2 {
    display: block;
  }
}

@media (max-width:767px) {
  .c13 {
    display: block;
  }
}

<div>
  <span
    id="title"
  >
    Terms and conditions may apply
  </span>
  <button
    id="one"
    type="button"
  >
    1
  </button>
  <button
    id="two"
    type="button"
  >
    2
  </button>
  <div>
    <div
      class="c0"
    >
      <div
        aria-label="modal dialog"
        aria-modal="true"
        role="dialog"
      >
        <div
          tabindex="0"
        />
        <div>
          <div>
            <div
              class="c1"
            >
              <div
                class="c2"
              >
                <hr
                  class="c3"
                />
              </div>
              <div
                class="c4"
              >
                <div
                  class="c5 container-fluid"
                >
                  <div
                    class="c6 row"
                  >
                    <div
                      class="col-xs-12 c7"
                    >
                      <div
                        class="c8 sc-htoDjs c8 c9"
                      >
                        <h2
                          class="c10"
                          data-testid="heading"
                          tabindex="-1"
                        >
                          Terms and conditions
                        </h2>
                        <button
                          aria-label="close"
                          class="c11"
                        >
                          <svg
                            class="c12"
                            focusable="false"
                            height="24px"
                            viewBox="0 0 24 24"
                            width="24px"
                            xlink="http://www.w3.org/1999/xlink"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <g
                              fill="none"
                              fill-rule="evenodd"
                              stroke="none"
                              stroke-width="1"
                            >
                              <g
                                fill="#4B286D"
                                fill-rule="nonzero"
                              >
                                <path
                                  d="M11.99975,12.70675 L7.85325,16.85325 C7.75625,16.95025 7.62825,16.99925 7.50025,16.99925 C7.37225,16.99925 7.24425,16.95025 7.14625,16.85325 C6.95125,16.65825 6.95125,16.34125 7.14625,16.14625 L11.29275,11.99975 L7.14625,7.85325 C6.95125,7.65825 6.95125,7.34125 7.14625,7.14625 C7.34125,6.95125 7.65825,6.95125 7.85325,7.14625 L11.99975,11.29275 L16.14625,7.14625 C16.34125,6.95125 16.65825,6.95125 16.85325,7.14625 C17.04825,7.34125 17.04825,7.65825 16.85325,7.85325 L12.70675,11.99975 L16.85325,16.14625 C17.04825,16.34125 17.04825,16.65825 16.85325,16.85325 C16.75625,16.95025 16.62825,16.99925 16.50025,16.99925 C16.37225,16.99925 16.24425,16.95025 16.14625,16.85325 L11.99975,12.70675 Z M12,24 C5.38330435,24 0,18.6166957 0,12 C0,5.38330435 5.38330435,0 12,0 C18.6166957,0 24,5.38330435 24,12 C24,18.6166957 18.6166957,24 12,24 Z M12,1.04347826 C5.95826087,1.04347826 1.04347826,5.95826087 1.04347826,12 C1.04347826,18.0417391 5.95826087,22.9565217 12,22.9565217 C18.0417391,22.9565217 22.9565217,18.0417391 22.9565217,12 C22.9565217,5.95826087 18.0417391,1.04347826 12,1.04347826 Z"
                                />
                              </g>
                            </g>
                          </svg>
                        </button>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="c13"
              >
                <hr
                  class="c3"
                />
              </div>
            </div>
            <div
              class="c14"
            />
          </div>
        </div>
        <div
          tabindex="0"
        />
      </div>
    </div>
  </div>
</div>
`;
